[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iquest-coder"
version = "0.1.0"
description = "IQuest-Coder CLI tools for serving and managing the model on SLURM clusters"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "IQuest Coder Team"}
]
keywords = ["llm", "vllm", "slurm", "openai-api", "code-generation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]
openhands = [
    "openhands>=1.0.0",
]

[project.scripts]
iquest-serve = "scripts.iquest_serve:main"

[project.urls]
Homepage = "https://github.com/IQuestLab/IQuest-Coder-V1"
Documentation = "https://github.com/IQuestLab/IQuest-Coder-V1"
Repository = "https://github.com/IQuestLab/IQuest-Coder-V1"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
